; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lscriu.c_LSCRIU_Set_Global_Counter_Type.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lscriu.c_LSCRIU_Set_Global_Counter_Type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRIU_GCOUNTER_SHM = common dso_local global i64 0, align 8
@CRIU_GCOUNTER_SIG = common dso_local global i64 0, align 8
@CRIU_GCOUNTER_PIPE = common dso_local global i64 0, align 8
@s_global_counter_type = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @LSCRIU_Set_Global_Counter_Type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LSCRIU_Set_Global_Counter_Type(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @CRIU_GCOUNTER_SHM, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %14, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @CRIU_GCOUNTER_SIG, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %6
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* @CRIU_GCOUNTER_PIPE, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %10, %6, %1
  %15 = load i64, i64* %2, align 8
  store i64 %15, i64* @s_global_counter_type, align 8
  br label %18

16:                                               ; preds = %10
  %17 = load i64, i64* @CRIU_GCOUNTER_SHM, align 8
  store i64 %17, i64* @s_global_counter_type, align 8
  br label %18

18:                                               ; preds = %16, %14
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
